# causal-compression

./: .gitignore  README.md  pyproject.toml
models/: __init__.py  analysis.py  examples.py  information.py  kinney_lombrozo.py  rsa.py  speaker.py
notebooks/: demonstrations.qmd
src/causal_compression/: __init__.py  analysis.py  dag.py  examples.py  listener.py
tests/: reproduce_appendix_figures.py  test_causal_compression.py  test_kinney_lombrozo.py
