[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal-compression"
version = "0.1.0"
description = "Causal compression model for speaker-listener communication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["causal inference", "pragmatics", "communication", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "jax>=0.4",
    "memo-lang>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
]
plot = [
    "matplotlib>=3.5",
]

[project.urls]
Repository = "https://github.com/yourusername/causal-compression"

[tool.hatch.build.targets.wheel]
packages = ["models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
